<resources>
    <string name="app_name">师大轨迹</string>
    <string name="name">起点及终点：</string>
    <string name="begin">首车：</string>
    <string name="stop">末车：</string>
    <string name="price">价格：</string>
    <string name="xuexiao">学&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;校</string>
    <string name="dc_nickname">一个炫酷的名字总会引人注目</string>
    <string name="action_settings">Settings</string>
    <string name="btn1_str">万达广场</string>
    <string name="btn2_str">新百/北国/勒泰</string>
    <string name="btn3_str">火车站</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="longitude1">38.007028</string>
    <string name="latitude1">114.526918</string>//北门
    <string name="longitude2">38.003265</string>
    <string name="latitude2">114.527255</string>//四方广场
    <string name="longitude3">38.000144</string>
    <string name="latitude3">114.524578</string>//诚朴园
    <string name="longitude4">38.000926</string>
    <string name="latitude4">114.527237</string>//第一食堂
    <string name="longitude5">38.00298</string>
    <string name="latitude5">114.520055</string>/天客隆
    <string name="longitude6">38.003265</string>
    <string name="latitude6">114.527255</string>//西门超市

</resources>
